--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "vscode-confluence-docker",
-  "displayName": "Confluence Docker",
-  "description": "Spin up a Confluence Docker container with PostgreSQL and sync code with Confluence",
+  "name": "vscode-confluence-test-suite",
+  "displayName": "Confluence Test Suite",
+  "description": "Spin up a Confluence Test Suite container with PostgreSQL and sync code with Confluence",
   "version": "0.1.0",
   "engines": {
     "vscode": "^1.60.0"
@@ -10,59 +10,59 @@
     "Other"
   ],
   "activationEvents": [
-    "onCommand:confluence-docker.startContainer",
-    "onCommand:confluence-docker.stopContainer",
-    "onCommand:confluence-docker.containerStatus",
-    "onCommand:confluence-docker.exportToConfluence",
-    "onCommand:confluence-docker.importFromConfluence"
+    "onCommand:confluence-test-suite.startContainer",
+    "onCommand:confluence-test-suite.stopContainer",
+    "onCommand:confluence-test-suite.containerStatus",
+    "onCommand:confluence-test-suite.exportToConfluence",
+    "onCommand:confluence-test-suite.importFromConfluence"
   ],
   "main": "./extension.js",
   "contributes": {
     "commands": [
       {
-        "command": "confluence-docker.startContainer",
-        "title": "Confluence Docker: Start Container"
+        "command": "confluence-test-suite.startContainer",
+        "title": "Confluence Test Suite: Start Container"
       },
       {
-        "command": "confluence-docker.stopContainer",
-        "title": "Confluence Docker: Stop Container"
+        "command": "confluence-test-suite.stopContainer",
+        "title": "Confluence Test Suite: Stop Container"
       },
       {
-        "command": "confluence-docker.containerStatus",
-        "title": "Confluence Docker: Check Container Status"
+        "command": "confluence-test-suite.containerStatus",
+        "title": "Confluence Test Suite: Check Container Status"
       },
       {
-        "command": "confluence-docker.exportToConfluence",
-        "title": "Confluence Docker: Export Code to Confluence"
+        "command": "confluence-test-suite.exportToConfluence",
+        "title": "Confluence Test Suite: Export Code to Confluence"
       },
       {
-        "command": "confluence-docker.importFromConfluence",
-        "title": "Confluence Docker: Import Content from Confluence"
+        "command": "confluence-test-suite.importFromConfluence",
+        "title": "Confluence Test Suite: Import Content from Confluence"
       }
     ],
     "menus": {
       "editor/context": [
         {
-          "command": "confluence-docker.exportToConfluence",
+          "command": "confluence-test-suite.exportToConfluence",
           "group": "navigation"
         }
       ],
       "commandPalette": [
         {
-          "command": "confluence-docker.exportToConfluence",
+          "command": "confluence-test-suite.exportToConfluence",
           "when": "editorIsOpen"
         },
         {
-          "command": "confluence-docker.importFromConfluence"
+          "command": "confluence-test-suite.importFromConfluence"
         },
         {
-          "command": "confluence-docker.startContainer"
+          "command": "confluence-test-suite.startContainer"
         },
         {
-          "command": "confluence-docker.stopContainer"
+          "command": "confluence-test-suite.stopContainer"
         },
         {
-          "command": "confluence-docker.containerStatus"
+          "command": "confluence-test-suite.containerStatus"
         }
       ]
     }
