--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "icon": "img/confDockerLogo.png",
   "displayName": "Confluence Test Suite",
   "description": "Spin up a Confluence Test Suite container with PostgreSQL and sync code with Confluence",
-  "version": "1.0.4",
+  "version": "1.0.11",
   "repository": {
     "type": "git",
-    "url": "https://github.com/fr0ntl0ad/conftest.git"
+    "url": "https://github.com/fr0ntl04d/conftest.git"
   },
   "publisher": "JordanMulhall",
   "keywords": [
